--- a/styles.css
+++ b/styles.css
@@ -1,112 +1,18 @@
-:root {
-  --main-bg-color: #262626;
-  --main-text-color: #A7A6A6;
-  --main-font: Montserrat;
-  --title-font: Chalk;
-  --size: clamp(1em, 1em + 5vw, 5em);
-  --font-size: clamp(1.5em, 1.5em + 1vw, 2em);
-}
-
-@font-face {
-  font-family: Chalk;
-  src: url("./fonts/DkCrayonCrumble-ddll.ttf");
-}
-
-@font-face {
-  font-family: Montserrat;
-  src: url("./fonts/Montserrat-VariableFont_wght.ttf");
-}
-
-* {
-  list-style: none;
-  text-decoration: none;
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  font-family: var(--main-font);
-  background-color: var(--main-bg-color);
-}
-
-button {
-  border: none;
-  background: none;
-  padding: 0;
-  margin: 0;
-  color: var(--main-text-color);
-}
-
-h1, h2 {
-  font-family: var(--title-font);
-}
-
-h1 {
-  font-size: var(--size);
-}
-
-
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-content: center;
-}
-
-img {
-  max-width: 100%;
-}
-
-header,
-.menu {
-  color: var(--main-text-color);
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: center;
-  margin: 0 auto;
-}
-
-div {
-  color: var(--main-text-color);
-  text-align: justify;
-  margin: 1em;
-}
-
 
 .icon {
-  width: calc(var(--size) - 0.75em);
-  height: calc(var(--size) - 0.75em);
-  border: none;
-  background: none;
-  padding: 0;
-  margin: 0;
+  width: calc(var(--size)/2);
+  height: calc(var(--size)/2);  
+  cursor: pointer;
 }
 
-.icon-small {
-  height: calc(var(--font-size));
-  top: 50%;
-  transform: translate(0%, -50%);
-}
-
-/* .center {
-  top: 50%;
-  transform: translate(0%, -50%);
-} */
-
-.right {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: right;
-  top: 50%;
-  transform: translate(0%, -50%);
-}
 
 /*dark-mode button*/
 input[type="checkbox"].switch {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  width: var(--size);
-	height: calc(var(--size)/2);
+  width: calc(var(--size)/1.4);
+	height: var(--size);
   background: #161616;
   border-radius: var(--size);
   position: relative;
@@ -114,7 +20,6 @@ input[type="checkbox"].switch {
   outline: none;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
-  transform: translate(0%, calc(150% - var(--size)));
 }
 
 input[type="checkbox"].switch:checked {
@@ -124,20 +29,20 @@ input[type="checkbox"].switch:checked {
 input[type="checkbox"].switch:after {
   position: absolute;
   content: "";
-  width: calc(var(--size)/2);
-  height: calc(var(--size)/2);
+  width: calc(var(--size)/1.4);
+  height: calc(var(--size)/1.4);
   border-radius: 50%;
   background: #fff;
-  -webkit-box-shadow: 0 0 .25em rgba(0, 0, 0, .3);
-  box-shadow: 0 0 .25em rgba(0, 0, 0, .3);
   -webkit-transform: scale(.7);
   transform: scale(.7);
-  left: 0;
+  bottom: 0;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
 }
 
 input[type="checkbox"].switch:checked:after {
-  left: calc(100% - calc(var(--size)/2));
+  bottom: calc(100% - calc(var(--size)/1.4));
 }
 /*end dark-mode button*/
+
+
