--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
-
 .icon {
   width: calc(var(--size)/2);
-  height: calc(var(--size)/2);  
-  cursor: pointer;
+  height: calc(var(--size)/2);
+  margin-left: clamp(0px, 5px + 1em, 10px);
 }
 
+h2 {
+  font-size: calc(var(--font-size)*2);
+}
 
 /*dark-mode button*/
 input[type="checkbox"].switch {
