--- a/css/login.css
+++ b/css/login.css
@@ -1,91 +1,153 @@
-body{
-    background: url(http://www.timurtek.com/wp-content/uploads/2014/10/form-bg.jpg) no-repeat center center fixed; 
- -webkit-background-size: cover;
- -moz-background-size: cover;
- -o-background-size: cover;
- background-size: cover;
- font-family:'HelveticaNeue','Arial', sans-serif;
+.form-item p {
+    font-size: small;
+}
 
+#logo {
+    margin: 50px;
 }
-a{color:#58bff6;text-decoration: none;}
-a:hover{color:#aaa; }
-.pull-right{float: right;}
-.pull-left{float: left;}
-.clear-fix{clear:both;}
-div.logo{text-align: center; margin: 20px 20px 30px 20px; fill: #566375;}
-div.logo svg{
-   width:180px;
-   height:100px;
-}
-.logo-active{fill: #44aacc !important;}
-#formWrapper{
-   background: rgba(0,0,0,.2); 
-   width:100%; 
-   height:100%; 
-   position: absolute; 
-   top:0; 
-   left:0;
-   transition:all .3s ease;}
-.darken-bg{background: rgba(0,0,0,.5) !important; transition:all .3s ease;}
 
-div#form{
-   position: absolute;
-   width:360px;
-   height:320px;
-   height:auto;
-   background-color: #fff;
-   margin:auto;
-   border-radius: 5px;
-   padding:20px;
-   left:50%;
-   top:50%;
-   margin-left:-180px;
-   margin-top:-200px;
+div#form {
+    position: absolute;
+    width: 40svw;
+    height: 50svh;
+    height: auto;
+    background-color: var(--main-text-color);
+    margin: auto;
+    border-radius: 5px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
-div.form-item{position: relative; display: block; margin-bottom: 20px;}
-input{transition: all .2s ease;}
-input.form-style{
-   color:#8a8a8a;
-   display: block;
-   width: 90%;
-   height: 44px;
-   padding: 5px 5%;
-   border:1px solid #ccc;
-   -moz-border-radius: 27px;
-   -webkit-border-radius: 27px;
-   border-radius: 27px;
-   -moz-background-clip: padding;
-   -webkit-background-clip: padding-box;
-   background-clip: padding-box;
-   background-color: #fff;
-   font-family:'HelveticaNeue','Arial', sans-serif;
-   font-size: 105%;
-   letter-spacing: .8px;
+
+
+div.form-item {
+    position: relative;
+    display: block;
+    text-align: left;
 }
-div.form-item .form-style:focus{outline: none; border:1px solid #58bff6; color:#58bff6; }
-div.form-item p.formLabel {
-   position: absolute;
-   left:26px;
-   top:2px;
-   transition:all .4s ease;
-   color:#bbb;}
-.formTop{top:-22px !important; left:26px; background-color: #fff; padding:0 5px; font-size: 14px; color:#58bff6 !important;}
-.formStatus{color:#8a8a8a !important;}
-input[type="submit"].login{
-   float:right;
-   width: 112px;
-   height: 37px;
-   -moz-border-radius: 19px;
-   -webkit-border-radius: 19px;
-   border-radius: 19px;
-   -moz-background-clip: padding;
-   -webkit-background-clip: padding-box;
-   background-clip: padding-box;
-   background-color: #55b1df;
-   border:1px solid #55b1df;
-   border:none;
-   color: #fff;
-   font-weight: bold;
+
+.formLabel {
+    pointer-events: none;
+    z-index: 0;
+    transition: all 0.3s ease;
 }
-input[type="submit"].login:hover{background-color: #fff; border:1px solid #55b1df; color:#55b1df; cursor:pointer;}
-input[type="submit"].login:focus{outline: none;}
+
+.form-style {
+    color: var(--main-text-color);
+    display: block;
+    height: 50px;
+    border: none;
+    border-radius: 27px;
+    background-color: #fff;
+    font-size: 105%;
+    letter-spacing: .8px;
+    width: 100%;
+}
+
+input.form-style {
+    padding-left: 20px;
+    margin-top: 30px;    
+}
+
+input:focus {
+    outline: 1px solid #000;
+    box-sizing: border-box;
+}
+
+
+p.formLabel {
+    position: absolute;
+    margin: 10px;
+    padding: 5px;
+    margin-left: 20px;
+    box-sizing: border-box;
+}
+
+/*---------------button---------------*/
+.button {
+    color: #000;
+    float: right;
+    padding: 10px 25px;
+    font-weight: 300;
+    background: #000;
+    cursor: pointer;
+    margin: 20px;
+    font-size: small;
+    color: #fff;
+    border-radius: 27px;
+}
+
+.button:hover {
+    color: #000;
+    background-color: #fff;
+    animation: jello-horizontal 0.9s both;
+}
+
+@keyframes jello-horizontal {
+    0% {
+      transform: scale3d(1, 1, 1);
+    }
+    30% {
+      transform: scale3d(1.25, 0.75, 1);
+    }
+    40% {
+      transform: scale3d(0.75, 1.25, 1);
+    }
+    50% {
+      transform: scale3d(1.15, 0.85, 1);
+    }
+    65% {
+      transform: scale3d(0.95, 1.05, 1);
+    }
+    75% {
+      transform: scale3d(1.05, 0.95, 1);
+    }
+    100% {
+      transform: scale3d(1, 1, 1);
+    }
+  }
+  
+  
+  
+  
+/*---------------end button---------------*/
+
+h6 {
+    margin-top: 20px;
+    font-size: xx-small;
+    color: #124561;
+    text-decoration: none;
+}
+
+h1 {
+    color: var(--main-bg-color);
+}
+
+
+.form-item:focus-within .formLabel {
+    top: -50%;
+    font-size: 80%;
+    background-color: var(--main-text-color);
+    color: #000;
+    outline: none;
+    border-bottom: 1px solid var(--main-bg-color);
+    border-radius: 10px;
+    box-sizing: border-box;
+    transition: all 0.3s ease-in;
+}
+
+.input-focus .formLabel,
+.form-style:not(:placeholder-shown) + .formLabel {
+    top: -50%;
+    font-size: 80%;
+    background-color: var(--main-text-color);
+    border-radius: 10px;
+    color: #000;
+    outline: none;
+    box-sizing: border-box;
+    transition: all 0.3s ease-in;
+}
+
+.form-style::placeholder {
+    color: transparent;
+}
