--- a/css/login.css
+++ b/css/login.css
@@ -1,3 +1,34 @@
+#daniel {
+    width: clamp(50px, 50px + 5vw, 300px);
+    animation: heartbeat 1.5s ease-in-out infinite both;
+    transition: all 0.3s ease;
+}
+
+@keyframes heartbeat {
+    from {
+      transform: scale(1);
+      transform-origin: center center;
+      animation-timing-function: ease-out;
+    }
+    10% {
+      transform: scale(0.91);
+      animation-timing-function: ease-in;
+    }
+    17% {
+      transform: scale(0.98);
+      animation-timing-function: ease-out;
+    }
+    33% {
+      transform: scale(0.87);
+      animation-timing-function: ease-in;
+    }
+    45% {
+      transform: scale(1);
+      animation-timing-function: ease-out;
+    }
+  }
+  
+
 .form-item p {
     font-size: small;
 }
@@ -8,8 +39,8 @@
 
 div#form {
     position: absolute;
-    width: 40svw;
-    height: 50svh;
+    width: clamp(300px, 1px + 40svw, 1000px);
+    height: clamp(400px, 1px + 40svw, 1000px);
     height: auto;
     background-color: var(--main-text-color);
     margin: auto;
@@ -24,6 +55,8 @@ div.form-item {
     position: relative;
     display: block;
     text-align: left;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .formLabel {
@@ -71,7 +104,7 @@ p.formLabel {
     font-weight: 300;
     background: #000;
     cursor: pointer;
-    margin: 20px;
+    margin: 30px;
     font-size: small;
     color: #fff;
     border-radius: 27px;
@@ -130,7 +163,7 @@ h1 {
     background-color: var(--main-text-color);
     color: #000;
     outline: none;
-    border-bottom: 1px solid var(--main-bg-color);
+    border: 1px solid var(--main-bg-color);
     border-radius: 10px;
     box-sizing: border-box;
     transition: all 0.3s ease-in;
